@@ -6,9 +6,10 @@ devscripts (2.10.6) UNRELEASED; urgency=low
     + Support passing multiple packages / addresses to "bts cache"
       (Closes: #416548)
   * Fix changelog typos (Closes: #429774)
- 
+  * debdiff: Sort confiles and control before comparing them. Thanks to Peter
+    Samuelson for the patch (Closes: #421781)
 
- -- Adam D. Barratt <debian-bts@adam-barratt.org.uk>  Wed, 20 Jun 2007 20:33:03 +0100
+ -- Adam D. Barratt <debian-bts@adam-barratt.org.uk>  Wed, 20 Jun 2007 21:40:04 +0100
 
 devscripts (2.10.5) unstable; urgency=low
 
